--- a/views/courses.html
+++ b/views/courses.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="courses-page">
-    <div class="container">
+    <div class="container header-container">
         <div class="row">
             <div class="col-12">
                 <header>
@@ -139,6 +139,12 @@
                         </div>
                     </section>
                 </header>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
                 <!-- ///courses grid/// -->
                 <section class="courses-grid">
                     <div class="section-header">
@@ -311,161 +317,164 @@
                         </div>
                     </div>
                 </section>
-
-                <!-- //////footer//// -->
-                <footer class="base-footer">
-                    <div class="overlay"></div>
-                    <div class="row justify-content-center">
-                        <div class="col-12 col-xxl-10 col-xxxl-9">
-                            <div class="float-form">
-                                <div class="row gx-sm">
-                                    <div class="col-12 col-lg-4">
-                                        <div class="image-wrapper">
-                                            <img src="/assets/img/footer.png" alt="">
-                                        </div>
-                                    </div>
-                                    <div class="col-12 col-lg-8">
-                                        <form class="footer-form">
-                                            <div class="title">
-                                                درخواست مشاوره با من
-                                            </div>
-                                            <div class="row gy-3 gx-2">
-                                                <div class=" col-12 col-sm-6">
-                                                    <input class="transparent white" type="text" name="full_name"
-                                                        placeholder="نام و نام خانوادگی شما">
-                                                </div>
-                                                <div class=" col-12 col-sm-6">
-                                                    <input class="transparent white" type="text" name="work_phone"
-                                                        placeholder="شماره تماس کاری" />
-                                                </div>
-                                                <div class="col-12">
-                                                    <textarea class="transparent white md" name="message"
-                                                        placeholder="پیغام شما"></textarea>
-                                                </div>
-                                            </div>
-                                            <div>
-                                                <button class="btn white mt-xs "
-                                                    type="submit">ارسال</button>
-                                                <div class="wave-image">
-                                                    <img src="/assets/img/wave.png" alt="">
-                                                </div>
-                                            </div>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row main-footer-content">
-                        <div class="col-12 col-sm-6 col-xl-3">
-                            <!-- ///footer list  -->
-                            <div class="footer-list ">
-                                <div class="header">
-                                    <span class="title">
-                                        درباره من </span>
-                                </div>
-                                <div class="content">
-                                    <p class="text p-left">
-                                        متن آزمــایشی توضیح دوره
-                                        بصـــــورت کــــوتاه و خـــــلاصه!
-                                        معنی خاصه نـــــداره و فـــقط
-                                        برای پرکردن فضا استــفاده
-                                        شده است!
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-sm-6 col-xl-3">
-                            <!-- ///footer list  -->
-                            <div class="footer-list">
-                                <div class="header">
-                                    <span class="title">
-                                        ارتباط با ما </span>
-                                </div>
-                                <div class="content">
-                                    <ul class="list">
-                                        <li class="bullet">البرز، فردیس، فلکه سوم</li>
-                                        <a href="tel:0216653333">
-                                            <li class="bullet">۰۲۱-۶۶۵-۳۳-۳۳</li>
-                                        </a>
-                                        <a href="tel:09124561212">
-                                            <li class="bullet">۰۹۱۲-۴۵۶-۱۲-۱۲</li>
-                                        </a>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-sm-6 col-xl-3">
-                            <!-- ///footer list  -->
-                            <div class="footer-list">
-                                <div class="header">
-                                    <span class="title">
-                                        دسترسی سریع
-                                    </span>
-                                </div>
-                                <div class="content">
-                                    <ul class="list">
-                                        <a href="/views/about.html">
-                                            <li class="bullet">درباره من
-                                            </li>
-                                        </a>
-                                        <a href="">
-                                            <li class="bullet">
-                                                قوانین و مقررات
-                                            </li>
-                                        </a>
-                                        <a href="/views/courses.html">
-                                            <li class="bullet">لیست دوره ها</li>
-                                        </a>
-                                        <a href="">
-                                            <li class="bullet">شرکت آتلانتیک</li>
-                                        </a>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-sm-6 col-xl-3 last-col">
-                            <!-- ///footer list  -->
-                            <div class="footer-list">
-                                <div class="header">
-                                    <span class="title">
-                                        در مــجازی
-                                    </span>
-                                </div>
-                                <div class="content">
-                                    <ul class="list">
-                                        <a href="">
-                                            <li class="mb-xs">
-                                                <div class="badge badge-white xl badge-shadow">
-                                                    <i class="icon mn-instagram"></i>
-                                                    <span class="title">اینستاگرام</span>
-                                                </div>
-                                            </li>
-                                        </a>
-                                        <a href="">
-                                            <li>
-                                                <div class="badge badge-white xl badge-shadow">
-                                                    <i class="icon mn-aparat"></i>
-                                                    <span class="title">صفحه آپارات</span>
-                                                </div>
-                                            </li>
-                                        </a>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12">
-                            <div class="rights-preserve text-center">
-                                <span>تمامی حقوق <span class="text-primary">محفوظ</span> است</span>
-                            </div>
-                        </div>
-                    </div>
-                </footer>
             </div>
         </div>
     </div>
+    <div class="container footer-container">
+        <!-- //////footer//// -->
+        <footer class="base-footer">
+          <div class="overlay"></div>
+          <div class="row justify-content-center">
+            <div class="col-12 col-xxl-10 col-xxxl-9">
+              <div class="float-form">
+                <div class="row gx-sm">
+                  <div class="col-12 col-lg-4">
+                    <div class="image-wrapper">
+                      <img src="/assets/img/footer.png" alt="" />
+                    </div>
+                  </div>
+                  <div class="col-12 col-lg-8">
+                    <form class="footer-form">
+                      <div class="title">درخواست مشاوره با من</div>
+                      <div class="row gy-3 gx-2">
+                        <div class="col-12 col-sm-6">
+                          <input
+                            class="transparent white"
+                            type="text"
+                            name="full_name"
+                            placeholder="نام و نام خانوادگی شما"
+                          />
+                        </div>
+                        <div class="col-12 col-sm-6">
+                          <input
+                            class="transparent white"
+                            type="text"
+                            name="work_phone"
+                            placeholder="شماره تماس کاری"
+                          />
+                        </div>
+                        <div class="col-12">
+                          <textarea
+                            class="transparent white md"
+                            name="message"
+                            placeholder="پیغام شما"
+                          ></textarea>
+                        </div>
+                      </div>
+                      <div>
+                        <button class="btn white mt-xs" type="submit">
+                          ارسال
+                        </button>
+                        <div class="wave-image">
+                          <img src="/assets/img/wave.png" alt="" />
+                        </div>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row main-footer-content">
+            <div class="col-12 col-sm-6 col-xl-3">
+              <!-- ///footer list  -->
+              <div class="footer-list">
+                <div class="header">
+                  <span class="title"> درباره من </span>
+                </div>
+                <div class="content">
+                  <p class="text p-left">
+                    متن آزمــایشی توضیح دوره بصـــــورت کــــوتاه و
+                    خـــــلاصه! معنی خاصه نـــــداره و فـــقط برای پرکردن فضا
+                    استــفاده شده است!
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-xl-3">
+              <!-- ///footer list  -->
+              <div class="footer-list">
+                <div class="header">
+                  <span class="title"> ارتباط با ما </span>
+                </div>
+                <div class="content">
+                  <ul class="list">
+                    <li class="bullet">البرز، فردیس، فلکه سوم</li>
+                    <a href="tel:0216653333">
+                      <li class="bullet">۰۲۱-۶۶۵-۳۳-۳۳</li>
+                    </a>
+                    <a href="tel:09124561212">
+                      <li class="bullet">۰۹۱۲-۴۵۶-۱۲-۱۲</li>
+                    </a>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-xl-3">
+              <!-- ///footer list  -->
+              <div class="footer-list">
+                <div class="header">
+                  <span class="title"> دسترسی سریع </span>
+                </div>
+                <div class="content">
+                  <ul class="list">
+                    <a href="/views/about.html">
+                      <li class="bullet">درباره من</li>
+                    </a>
+                    <a href="">
+                      <li class="bullet">قوانین و مقررات</li>
+                    </a>
+                    <a href="/views/courses.html">
+                      <li class="bullet">لیست دوره ها</li>
+                    </a>
+                    <a href="">
+                      <li class="bullet">شرکت آتلانتیک</li>
+                    </a>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-xl-3 last-col">
+              <!-- ///footer list  -->
+              <div class="footer-list">
+                <div class="header">
+                  <span class="title"> در مــجازی </span>
+                </div>
+                <div class="content">
+                  <ul class="list">
+                    <a href="">
+                      <li class="mb-xs">
+                        <div class="badge badge-white xl badge-shadow">
+                          <i class="icon mn-instagram"></i>
+                          <span class="title">اینستاگرام</span>
+                        </div>
+                      </li>
+                    </a>
+                    <a href="">
+                      <li>
+                        <div class="badge badge-white xl badge-shadow">
+                          <i class="icon mn-aparat"></i>
+                          <span class="title">صفحه آپارات</span>
+                        </div>
+                      </li>
+                    </a>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12">
+              <div class="rights-preserve text-center">
+                <span
+                  >تمامی حقوق
+                  <span class="text-primary">محفوظ</span> است</span
+                >
+              </div>
+            </div>
+          </div>
+        </footer>
+</div>
 </body>
 
 </html>
