--- a/assets/css/components/header/_sm.scss
+++ b/assets/css/components/header/_sm.scss
@@ -1,3 +1,7 @@
+.container.header-container{
+    padding-left: 15px;
+    padding-right: 15px;
+}
 header{
     .header-content {
         .right-section {
