--- a/views/about.html
+++ b/views/about.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container header-container">
         <div class="row">
             <div class="col-12">
                 <header>
@@ -139,6 +139,13 @@
                         </div>
                     </section>
                 </header>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
                 <!-- ////start-adventure section  -->
                 <section class="start-adventure">
                     <div class="row justify-content-center">
