blogs-fix-styles

--- a/assets/css/components/button/_xs.scss
+++ b/assets/css/components/button/_xs.scss
@@ -3,21 +3,21 @@
     --btn-padding-y: 8px;
 }
 
-.btn {
-  font-size: 14px;
-  padding: 8px 18px;
-    &.sm {
-        padding: 8px 12px;
-        font-size: 10px;
-    }
+// .btn {
+//   font-size: 14px;
+//   padding: 8px 18px;
+//     &.sm {
+//         padding: 8px 12px;
+//         font-size: 10px;
+//     }
 
-    &.lg {
-        padding: 8px 18px;
-        font-size: 12px;
-    }
+//     &.lg {
+//         padding: 8px 18px;
+//         font-size: 12px;
+//     }
 
-    &.xl {
-        padding: 8px 18px;
-        font-size: 12px;
-    }
-}
+//     &.xl {
+//         padding: 8px 18px;
+//         font-size: 12px;
+//     }
+// }
