--- a/assets/css/components/common/_sm.scss
+++ b/assets/css/components/common/_sm.scss
@@ -7,12 +7,12 @@
     flex-direction: column;
     width: 100%;
     align-items: center;
-    .statistics {
-        .statistic{
-            flex-direction: column;
-        }
+    // .statistics {
+    //     .statistic{
+    //         flex-direction: column;
+    //     }
 
-    }
+    // }
 }
 .banner {
     margin-top:32px;
