--- a/assets/css/pages/course/_base.scss
+++ b/assets/css/pages/course/_base.scss
@@ -1,82 +1,77 @@
 body.course-page {
-    background-image: none;
+  background-image: none;
 }
 
 .course-header-container {
-    border-radius: 20px;
-    background: rgba(9, 114, 255, 0.06);
-    background-image: url('/assets/img/course-bg-2.png');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin: 26px 32px 0 32px;
+  border-radius: 20px;
+  background: rgba(9, 114, 255, 0.06);
+  background-image: url("/assets/img/course-bg-2.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 26px 32px 0 32px;
 
-header{
+  header {
     .course-header {
-            margin-top: 133px;
-            margin-bottom: 126px;
-        .row{
-         --bs-gutter-x: 200px;
+      margin-top: 133px;
+      margin-bottom: 126px;
+      .row {
+        --bs-gutter-x: 200px;
+      }
+      .right-section {
+        .box {
+          padding-top: 53px;
+          .main {
+            padding-bottom: 0;
+            .text {
+              margin-top: 0;
+              margin-bottom: 27px;
+            }
+          }
         }
-        .right-section{
-         .box{
-            padding-top: 53px;
-             .main{
-                padding-bottom: 0;
-                 .text{
-                    margin-top: 0;
-                     margin-bottom: 27px;
-                 }
-             }
-         }
-        }
-     }
+      }
+    }
+  }
 }
-}
-
-
-
 
 section.course-description {
-    margin-top: 108px;
+  margin-top: 108px;
 
-    .section-header {
-        margin-bottom: 18px;
-    }
-
-
+  .section-header {
+    margin-bottom: 18px;
+  }
 }
 
 section.services {
-    margin-top: 54px;
-    display: flex;
-    gap: 20px;
-    justify-content: center;
-    width: 100% !important;
+  margin-top: 54px;
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  width: 100% !important;
 
-    .simple-card {
-        &:first-child {
-            width: 30%;
-        }
-
-        &:nth-child(2) {
-            width: 38%;
-        }
-
-        &:last-child {
-            width: 32%;
-        }
+  .simple-card {
+    &:first-child {
+      width: 30%;
     }
+
+    &:nth-child(2) {
+      width: 38%;
+    }
+
+    &:last-child {
+      width: 32%;
+    }
+  }
 }
 
 section.course-title {
-    margin-top: 141px;
-    .section-header {
-        margin-bottom: 32px;
-    }
+  margin-top: 141px;
+  .section-header {
+    margin-bottom: 32px;
+  }
 }
 
 section.course-teacher {
-    margin-bottom: 194px;
-    margin-top: 181px;
+  margin-bottom: 194px;
+  margin-top: 181px;
 }
