--- a/assets/css/pages/course/_sm.scss
+++ b/assets/css/pages/course/_sm.scss
@@ -1,47 +1,57 @@
 .course-header-container {
-    margin: 0;
-header{
+  margin: 0;
+  border-radius: 0;
+  width: 100%;
+  header {
     .course-header {
-        margin-bottom: 42px;
+      margin-bottom: 25px;
 
-        .right-section {
-            .box {
-                padding-top: 0;
-                .main {
-                    .text {
-                        margin-top: 0;
-                        margin-bottom: 8px;
-                        font-size: 24px;
-                    }
-
-                    .subtitle {
-                        margin-bottom: 16px;
-                        font-size: 16px;
-                    }
-                    .footer{
-                       a{
-                        width: 100%;
-                        .btn{
-                            width: 100%;
-                        }
-                       }
-                    }
-                }
+      .right-section {
+        .box {
+          padding-top: 0;
+          .main {
+            .text {
+              margin-top: 0;
+              margin-bottom: 8px;
+              font-size: 24px;
             }
-        }
-    }
-}
-}
 
-
-section.course-teacher {
-    margin-top: 80px;
-    margin-bottom: 42px;
-       .card-row {
-      .content{
-        .title{
-            font-size: 32px;
+            .subtitle {
+              margin-bottom: 16px;
+              font-size: 16px;
+            }
+            .footer {
+              a {
+                width: 100%;
+                .btn {
+                  width: 100%;
+                }
+              }
+            }
+          }
         }
       }
     }
+  }
+}
+section.services {
+  .simple-card {
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    .text{
+      text-align: start;
+    }
+  }
+}
+section.course-teacher {
+  margin-top: 80px;
+  margin-bottom: 42px;
+  .card-row {
+    .content {
+      .title {
+        font-size: 32px;
+      }
+    }
+  }
 }
