changes-for-all-pages

--- a/assets/css/components/button/_base.scss
+++ b/assets/css/components/button/_base.scss
@@ -170,6 +170,13 @@ button.icon {
     background: none;
 
     &:hover {
-        color: var(--primary);
+        .icon{
+            color: var(--primary);
+        }
+    }
+    &:focus{
+        .icon{
+            color: var(--primary);
+        }
     }
 }
