--- a/views/course.html
+++ b/views/course.html
@@ -56,7 +56,9 @@
                 <div class="actions">
                   <a class="btn icon"> <i class="icon li-bag-2"></i> </a>
                   <button class="btn light">ثبت نام / ورود</button>
-                  <button class="icon li-login login-btn"></button>
+                  <button class="icon login-btn pt-1">
+                    <i class="icon li-login"></i>
+                  </button>
                 </div>
                 <nav class="hamburger-menu-navbar hamburger-menu">
                   <div class="hamburger-menu-header">
@@ -257,10 +259,11 @@
               </div>
               <div class="accordion expanded">
                 <div class="title">
-                  <div class="d-flex  gap-xs">
+                  <div class="d-flex gap-xs">
                     <i class="icon mn-folder1"></i>
                     <span>
-                      نصب و راه‌اندازی: مراحل نصب  دستگاه تهویه همراه با اتصال به سیستم‌های  لوله‌کشی
+                      نصب و راه‌اندازی: مراحل نصب دستگاه تهویه همراه با اتصال به
+                      سیستم‌های لوله‌کشی
                     </span>
                   </div>
                 </div>
@@ -281,16 +284,36 @@
               </div>
               <div class="accordion">
                 <div class="title">
-                  <div class="d-flex  gap-xs">
+                  <div class="d-flex gap-xs">
                     <i class="icon mn-folder1"></i>
                     <span>
-                      انتخاب دستگاه مناسب: مطالعه دستگاه تهویه مناسب بر اساس
-                      نیازها و مصرف انرژی</span
-                    >
+                      تنظیمات و کنترل: آموزش تنظیم دستگاه به منظور رسیدن به
+                      شرایط مطلوب تهویه هوا
+                    </span>
                   </div>
                 </div>
                 <div class="content">
                   <ul class="list gray">
+                    <li class="bullet">
+                      آموزش مراحل نصب دستگاه تهویه با اتصال به سیستم‌های
+                      لوله‌کشی
+                      <span class="time">۱۲:۰۴</span>
+                    </li>
+                    <li class="bullet">
+                      آموزش مراحل نصب دستگاه تهویه با اتصال به سیستم‌های
+                      لوله‌کشی
+                      <span class="time">۱۲:۰۴</span>
+                    </li>
+                    <li class="bullet">
+                      آموزش مراحل نصب دستگاه تهویه با اتصال به سیستم‌های
+                      لوله‌کشی
+                      <span class="time">۱۲:۰۴</span>
+                    </li>
+                    <li class="bullet">
+                      آموزش مراحل نصب دستگاه تهویه با اتصال به سیستم‌های
+                      لوله‌کشی
+                      <span class="time">۱۲:۰۴</span>
+                    </li>
                     <li class="bullet">
                       آموزش مراحل نصب دستگاه تهویه با اتصال به سیستم‌های
                       لوله‌کشی
