--- a/views/blogs.html
+++ b/views/blogs.html
@@ -57,7 +57,9 @@
                   <div class="actions">
                     <a class="btn icon"> <i class="icon li-bag-2"></i> </a>
                     <button class="btn light">ثبت نام / ورود</button>
-                    <button class="icon li-login login-btn"></button>
+                    <button class="icon login-btn pt-1">
+                      <i class="icon li-login"></i>
+                    </button>
                   </div>
                   <nav class="hamburger-menu-navbar hamburger-menu">
                     <div class="hamburger-menu-header">
@@ -246,7 +248,7 @@
                     <div class="content">
                       <div class="title">
                         طراحی انواع چیلر تراکمی آب خنک یکی از موضوعات حیاتی و
-                        پرکاربرد در زمینه تهویه ‌مطبوع و سیستم‌های تبرید 
+                        پرکاربرد در زمینه تهویه ‌مطبوع و سیستم‌های تبرید
                       </div>
                     </div>
                   </a>
